Repair overlap problem on other browsers

--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -6,6 +6,9 @@
  font-family: "Coolvetica";
  src: url("./../police/coolvetica.ttf");
 }
+:root {
+ 	barre: 0px;
+}
 *{
 	box-sizing:border-box;
 }
@@ -25,7 +28,7 @@ body{
   display: flex;
   flex-direction:column;
   align-items:center;
-  height: calc(100vh - 56px);
+  height: calc(100vh - var(--barre));
   width: 100%;
   position: relative;
   h1 {
@@ -97,9 +100,9 @@ hr {
 	left: 0;
 }
 #tacos
-{ height: calc(100vh - 56px);
+{ height: calc(100vh - var(--barre));
 	width: 100%;
-	margin-top: 56px;
+	margin-top: var(--barre);
 }
 .burgermenu
 {
